# handwriter

./: .gitignore  Cargo.toml  build.rs  demo.py  drawing.py  hand.py  requirements.txt  rnn.py  rnn_cell.py  tf_base_model.py  tf_utils.py
checkpoints/: checkpoint  model-18100.index  model-18260.index  model-18560.index  model-18720.index
examples/: svgtest.rs
src/: lib.rs  main.rs  pystruct.rs  strokes.rs
utils/: string_utils.py
